not-used/tracker/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracker
  namespace: tedy
  labels:
    app: tracker
    # force policy will ensure that deployment is updated
    # even when tag is unchanged (latest remains)
    keel.sh/policy: force
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracker
  template:
    metadata:
      labels:
        app: tracker
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: tracker
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "50m"
              memory: "50M"
          image: tedyst/tracker:latest
          ports:
            - containerPort: 5000
            - containerPort: 5678
          volumeMounts:
            - name: data-volume
              mountPath: /data
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: tracker
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/arch: arm
