not-used/tracker/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tracker-ingress
  namespace: tedy
spec:
  routes:
    - match: Host(`tracker.stoicatedy.ovh`)
      kind: Rule
      services:
        - name: tracker
          port: 5000
  middlewares:
    - name: hsts-header
  tls:
    secretName: certificate-stoicatedy-ovh
